World Multiple importance sample + Equi-angular sampling gives noise and weirdness in volumes in 2.71 testbuild #40408

Closed
opened 2014-05-28 14:57:24 +02:00 by Jaroslav Novotny · 8 comments

System Information
win 7 64bit, geforce 680gtx

Blender Version
Broken: 2.71 testbuild (c56bbcc)
Worked: 2.70a official (f93bc76)

Short description of error
Multiple importance samples in Word settings causes equi-angular sampled volumes to be extremely noisy. Weird sampling progress in rendered viewport.
Distance sampling + MIS working fine, also Equi without MIS is fine. The noise does not clear out with more render samples. Worked in 2.70a.

Exact steps for others to reproduce the error
test.blend
render both viewport and F12, compare with multiple importance samples off and with 2.70a

**System Information** win 7 64bit, geforce 680gtx **Blender Version** Broken: 2.71 testbuild (c56bbcc) Worked: 2.70a official (f93bc76) **Short description of error** Multiple importance samples in Word settings causes equi-angular sampled volumes to be extremely noisy. Weird sampling progress in rendered viewport. Distance sampling + MIS working fine, also Equi without MIS is fine. The noise does not clear out with more render samples. Worked in 2.70a. **Exact steps for others to reproduce the error** [test.blend](https://archive.blender.org/developer/F91717/test.blend) render both viewport and F12, compare with multiple importance samples off and with 2.70a

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jerryno

Added subscriber: @jerryno
Brecht Van Lommel was assigned by Sergey Sharybin 2014-05-29 09:27:40 +02:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

@brecht, mind checking on this one?

@brecht, mind checking on this one?

The difference is that in 2.70a this wasn't actually using equiangular sampling, that's only supported for homogeneous volumes, and the volume in this file is not marked as such in the material properties. In 2.71 we can autodetect when a volume is homogeneous in cases like this, so now it actually uses equiangular sampling.

The bug here is in equiangular sampling for distant/background lights, that's actually not possible but we forgot to check for that in the code.

The weird sampling you see in the viewport is not considered a bug at the moment, it's due to correlation in the sampling pattern between pixels. It will converge to the right result even though it can look strange.

The difference is that in 2.70a this wasn't actually using equiangular sampling, that's only supported for homogeneous volumes, and the volume in this file is not marked as such in the material properties. In 2.71 we can autodetect when a volume is homogeneous in cases like this, so now it actually uses equiangular sampling. The bug here is in equiangular sampling for distant/background lights, that's actually not possible but we forgot to check for that in the code. The weird sampling you see in the viewport is not considered a bug at the moment, it's due to correlation in the sampling pattern between pixels. It will converge to the right result even though it can look strange.

This issue was referenced by 9e61dcc6b8

This issue was referenced by 9e61dcc6b89f21420bf64c25741c3a259c4158ba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9e61dcc6b8.

Closed by commit 9e61dcc6b8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40408
No description provided.