Fix T40408: world MIS + equiangular sampling giving unnecessary noise.

It's actually not possible to do equiangular sampling for distant lights, now
it reverts to distance sampling in this case.